--- a/layouts/mortgage-calculator/mortgage-calculator.html
+++ b/layouts/mortgage-calculator/mortgage-calculator.html
@@ -1,5 +1,9 @@
 {{ define "main" }}
-<script>
-	document.currentScript.replaceWith(ihfKestrel.render());
-</script>
+<div class="section">
+    <div class="container mx-auto">
+        <script>
+            document.currentScript.replaceWith(ihfKestrel.render());
+        </script>
+    </div>
+</div>
 {{ end }}
