--- a/layouts/index.html
+++ b/layouts/index.html
@@ -155,6 +155,64 @@
   </div>
 {{ end }}
 
+{{ if eq "featured_listings_idx" .type }}
+<div class="section relative bg-cover bg-no-repeat bg-center" style="{{ if .background_color }}background-color:{{ .background_color }}{{ end }};{{ if .background_image }}background-image:url({{ .background_image }}){{ end }}">    <div class="container mx-auto">
+        <div class="text-center mb-10">
+            <div class="content" style="{{ if .body_color }}color:{{ .body_color }}{{ end }}">{{.body | markdownify }}</div>
+        </div>
+
+        <script>
+            document.currentScript.replaceWith(ihfKestrel.render({
+                "component": "featuredListingSearchWidget",
+                "propertyType": "SFR",
+                "status": "active",
+                "sort": "pd",
+                "resultsPerPage": 15
+            }));
+        </script>
+    </div>
+</div>
+{{ end }}
+
+{{ if eq "featured_gallery_idx" .type }}
+<div class="section relative bg-cover bg-no-repeat bg-center" style="{{ if .background_color }}background-color:{{ .background_color }}{{ end }};{{ if .background_image }}background-image:url({{ .background_image }}){{ end }}">    <div class="container mx-auto">
+    <div class="container mx-auto">
+        <div class="text-center mb-10">
+            <div class="content" style="{{ if .body_color }}color:{{ .body_color }}{{ end }}">{{.body | markdownify }}</div>
+        </div>
+        <script>
+            document.currentScript.replaceWith(ihfKestrel.render({
+                "component": "gallerySliderWidget",
+                "rows": 1,
+                "navigation": true,
+                "nav": "bottom",
+                "auto": true,
+                "maxResults": 25,
+                "status": "active",
+                "featured": true,
+                "effect": "fade"
+            }));
+        </script>
+    </div>
+</div>
+{{ end }}
+
+{{ if eq "featured_gallery_idx" .type }}
+<div class="section relative bg-cover bg-no-repeat bg-center" style="{{ if .background_color }}background-color:{{ .background_color }}{{ end }};{{ if .background_image }}background-image:url({{ .background_image }}){{ end }}">    <div class="container mx-auto">
+    <div class="container mx-auto">
+        <div class="text-center mb-10">
+            <div class="content" style="{{ if .body_color }}color:{{ .body_color }}{{ end }}">{{.body | markdownify }}</div>
+        </div>
+        <script>
+            document.currentScript.replaceWith(ihfKestrel.render({
+                "component": "quickSearchWidget",
+                "style": "universal"
+            }));
+        </script>
+    </div>
+</div>
+{{ end }}
+
 
 {{ end }} <!-- end home section range-->
 
